--- a/Stiller/AnaBölümTeknikBeceriler.css
+++ b/Stiller/AnaBölümTeknikBeceriler.css
@@ -4,18 +4,18 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, auto); 
-    gap: 15vh 10vw;
+    gap: 6vh 7.5vw;
 
-    margin: 4vh 10vw;
-    width: 80vw;
-    height: 47vh;
+    margin: 4vh 5vw;
+    width: 90vw;
+    height: 52vh;
     padding: 0;
 }
 
 .ana-bölüm-teknik-beceriler-beceri
 {
-    height: 16vh;
-    width: 20vw;
+    height: 24vh;
+    width: 25vw;
     padding: 0;
 
     background-color: transparent;
@@ -32,11 +32,12 @@
 {
     position: relative;
 
-    height: 8vh;
+    height: 12vh;
     padding: 1vh;
 
-    font-size: 160%;
-    font-weight: 900;
+    font-size: xx-large;
+    font-weight: 800;
+    align-content: center;
 
     background-color: #D4BBE0;
     color: #292929;
@@ -46,8 +47,11 @@
 
 .ana-bölüm-teknik-beceriler-içerik
 {
-    height: 6vh;
+    height: 8vh;
+    padding: 1vh;
     align-content: center;
+    font-size: x-large;
+    font-weight: 500;
 }
 
 @media only screen and (orientation: portrait)
