--- a/Stiller/AnaBölümProjeler.css
+++ b/Stiller/AnaBölümProjeler.css
@@ -20,6 +20,7 @@
     gap: 0 90%;
     position: absolute;
     pointer-events: none;
+    cursor: pointer;
 }
 
 .ana-bölüm-projeler-buton
@@ -54,14 +55,14 @@
     display: block;
     position: relative;
     float: left;
-    font-weight: 500;
-    font-size: 160%;
+    font-weight: normal;
+    font-size: x-large;
 }
 
 .ana-bölüm-projeler-ismi
 {
-    font-weight: 900;
-    font-size: 180%;
+    font-weight: bold;
+    font-size: xx-large;
     margin: 2% 2%;
     position: relative;
     white-space: normal;
@@ -170,6 +171,12 @@
         border-radius: 16px 16px 0 0;
         width: 100%;
         height: 50%;
+        font-size: large;
+    }
+
+    .ana-bölüm-projeler-ismi
+    {
+        font-size: x-large;
     }
 
     .ana-bölüm-projeler-içerik-medya
