--- a/Stiller/AnaBölümProjeler.css
+++ b/Stiller/AnaBölümProjeler.css
@@ -176,7 +176,7 @@
 
     .ana-bölüm-projeler-ismi
     {
-        font-size: x-large;
+        font-size: larger;
     }
 
     .ana-bölüm-projeler-içerik-medya
