--- a/Stiller/AnaBölümGiriş.css
+++ b/Stiller/AnaBölümGiriş.css
@@ -33,22 +33,22 @@
 {
     .ana-bölüm-giriş-içerik
     {
-        height: 36vh;
+        height: 45vh;
         width: 90vw;
-        margin: 2vh 4vw 6vh;
+        margin: 2vh 4vw 3vh;
         padding: 0 1vw;
 
         font-size: large;
         font-weight: 600;
 
         font-weight: normal;
-        line-height: 1.6;
+        line-height: 1.2;
     }
 
     #ana-bölüm-giriş-başlık
     {
-        height: 56vh;
+        height: 50vh;
         padding: 0;
-        font-size: 600%;
+        font-size: -webkit-xxx-large;
     }
 }
